aligned_view-button, firstNonActive error rectified, viewport issue resolved along with ipad screens

--- a/blocks/product-hero/product-hero.css
+++ b/blocks/product-hero/product-hero.css
@@ -11,7 +11,7 @@
 }
 
 .product-hero .product-hero-content {
-    @apply grid md:grid-cols-12 lg:gap-16 md:gap-12 gap-2;
+    @apply flex flex-col md:flex-row lg:gap-16 md:gap-12 gap-2;
 }
 
 .product-hero .hero-default-content {
@@ -60,15 +60,15 @@
 }
 
 .product-hero .vertical-gallery-container {
-    @apply md:col-span-5 order-first;
+    @apply shrink-0 order-first;
 }
 
 .product-hero .vertical-gallery-container > div {
-    @apply grid grid-rows-1 gap-y-3 bg-transparent overflow-hidden md:grid-cols-5;
+    @apply flex flex-col lg:flex-row gap-3 bg-transparent overflow-hidden;
 }
 
 .product-hero .vertical-gallery-container > div div:nth-child(1) {
-    @apply relative col-auto md:col-span-4 bg-white shadow-lg md:shadow-none;
+    @apply relative bg-white shadow-lg md:shadow-none;
 }
 
 .product-hero .vertical-gallery-container > div div:nth-child(1) img {
@@ -76,11 +76,11 @@
 }
 
 .product-hero .vertical-gallery-container > div > div:not(:nth-child(1)) {
-    @apply flex flex-row md:flex-col col-auto md:col-span-1 gap-2 md:order-first overflow-auto bg-transparent scroll-pl-6 snap-x;
+    @apply w-full lg:w-20 flex flex-row lg:flex-col lg:order-first gap-2 overflow-auto bg-transparent scroll-pl-6 snap-x;
 }
 
 .product-hero .vertical-gallery-container .view-more {
-    @apply flex flex-col p-2 my-auto bg-opacity-50 text-sm text-danaherpurple-500 font-semibold bg-white cursor-pointer;
+    @apply flex flex-col p-2 text-white self-center select-none text-sm font-medium bg-gray-400 border-gray-300 cursor-pointer rounded-md hover:rounded shadow-lg hover:shadow-md;
 }
 
 .product-hero .vertical-gallery-container > div > div:not(:nth-child(1)) img {
