--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1328,14 +1328,24 @@ button.suggestion.selected {
 }
 
 .product-hero .product-hero-content {
-    display: grid;
+    display: flex;
+    flex-direction: column;
     gap: 0.5rem;
+}
+
+.testimonial .testimonial-footer .product-hero .product-hero-content>div:nth-child(2) {
+    margin-top: 0px;
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 1.5rem;
+    --tw-text-opacity: 1;
+    color: rgb(2 105 124 / var(--tw-text-opacity));
 }
 
 @media (min-width: 768px) {
 
     .product-hero .product-hero-content {
-        grid-template-columns: repeat(12, minmax(0, 1fr));
+        flex-direction: row;
         gap: 3rem;
     }
 }
@@ -1437,33 +1447,35 @@ button.suggestion.selected {
 
 .product-hero .vertical-gallery-container {
     order: -9999;
-}
-
-@media (min-width: 768px) {
-
-    .product-hero .vertical-gallery-container {
-        grid-column: span 5 / span 5;
-    }
+    flex-shrink: 0;
 }
 
 .product-hero .vertical-gallery-container > div {
-    display: grid;
-    grid-template-rows: repeat(1, minmax(0, 1fr));
-    row-gap: 0.75rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
     overflow: hidden;
     background-color: transparent;
 }
 
-@media (min-width: 768px) {
+.testimonial .testimonial-footer .product-hero .vertical-gallery-container > div>div:nth-child(2) {
+    margin-top: 0px;
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 1.5rem;
+    --tw-text-opacity: 1;
+    color: rgb(2 105 124 / var(--tw-text-opacity));
+}
+
+@media (min-width: 1024px) {
 
     .product-hero .vertical-gallery-container > div {
-        grid-template-columns: repeat(5, minmax(0, 1fr));
+        flex-direction: row;
     }
 }
 
 .product-hero .vertical-gallery-container > div div:nth-child(1) {
     position: relative;
-    grid-column: auto;
     --tw-bg-opacity: 1;
     background-color: rgb(255 255 255 / var(--tw-bg-opacity));
     --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
@@ -1474,7 +1486,6 @@ button.suggestion.selected {
 @media (min-width: 768px) {
 
     .product-hero .vertical-gallery-container > div div:nth-child(1) {
-        grid-column: span 4 / span 4;
         --tw-shadow: 0 0 #0000;
         --tw-shadow-colored: 0 0 #0000;
         box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -1509,8 +1520,8 @@ button.suggestion.selected {
 }
 
 .product-hero .vertical-gallery-container > div > div:not(:nth-child(1)) {
-    grid-column: auto;
     display: flex;
+    width: 100%;
     scroll-snap-type: x var(--tw-scroll-snap-strictness);
     scroll-padding-left: 1.5rem;
     flex-direction: row;
@@ -1519,29 +1530,37 @@ button.suggestion.selected {
     background-color: transparent;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
 
     .product-hero .vertical-gallery-container > div > div:not(:nth-child(1)) {
         order: -9999;
-        grid-column: span 1 / span 1;
+        width: 5rem;
         flex-direction: column;
     }
 }
 
 .product-hero .vertical-gallery-container .view-more {
-    margin-top: auto;
-    margin-bottom: auto;
     display: flex;
     cursor: pointer;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+            user-select: none;
     flex-direction: column;
-    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-    --tw-bg-opacity: 0.5;
+    align-self: center;
+    border-radius: 0.375rem;
+    --tw-border-opacity: 1;
+    border-color: rgb(209 213 219 / var(--tw-border-opacity));
+    --tw-bg-opacity: 1;
+    background-color: rgb(156 163 175 / var(--tw-bg-opacity));
     padding: 0.5rem;
     font-size: 0.875rem;
     line-height: 1.25rem;
-    font-weight: 600;
+    font-weight: 500;
     --tw-text-opacity: 1;
-    color: rgb(117 35 255 / var(--tw-text-opacity));
+    color: rgb(255 255 255 / var(--tw-text-opacity));
+    --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .testimonial .testimonial-footer .product-hero .vertical-gallery-container .view-more>div:nth-child(2) {
@@ -1551,6 +1570,13 @@ button.suggestion.selected {
     line-height: 1.5rem;
     --tw-text-opacity: 1;
     color: rgb(2 105 124 / var(--tw-text-opacity));
+}
+
+.product-hero .vertical-gallery-container .view-more:hover {
+    border-radius: 0.25rem;
+    --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .product-hero .vertical-gallery-container > div > div:not(:nth-child(1)) img {
